[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escon2_can"
version = "0.1.0"
description = "A Python library for Maxon ESCON2 motor controllers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyserial", ]

[tool.setuptools.packages.find]
where = ["src"]
